--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,16 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
   <welcome-file-list>
-    <welcome-file>jsp/common/login.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+
+  <!-- Map the login page explicitly -->
+  <servlet>
+    <servlet-name>LoginJSP</servlet-name>
+    <jsp-file>/jsp/common/login.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginJSP</servlet-name>
+    <url-pattern>/login.jsp</url-pattern>
+  </servlet-mapping>
 </web-app>
